# buff

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  openapi.yml
buff-notifications/: .dockerignore  Cargo.toml  Dockerfile
buff-notifications/buffapi/: Cargo.toml  README.md
buff-notifications/buffapi/.openapi-generator/: FILES
buff-notifications/buffapi/docs/: AddReviewRequest.md  AddVideoReviewRequest.md  AdminLoginResponse.md  AssignModeratorRequest.md  BlacklistUserRequest.md  Bounds.md  ChatHistory.md  ChatHistoryMessagesInnerInner.md  ChatResponse.md  CratehandlersadminblacklistApi.md  CratehandlersadmincurrencyApi.md  CratehandlersadminmoderatorsApi.md  CratehandlersadminordersApi.md  CratehandlersadminrequisitesApi.md  CratehandlersadminreviewsApi.md  CratehandlersadminsocialApi.md  CratehandlersadminusersApi.md  CratehandlersauthadminsApi.md  CratehandlersauthusersApi.md  CratehandlerscurrencyApi.md  CratehandlersordersApi.md  CratehandlersrequisitesApi.md  CratehandlersreviewsusersApi.md  CratehandlerssocialApi.md  CratehandlersstatususersApi.md  CratehandlersuserApi.md  CreateCurrencyRequest.md  CreateOrderRequest.md  Credentials.md  Currency.md  Details.md  EmailForm.md  GetChatRequest.md  JwtResponse.md  LoginLinkResponse.md  Message.md  ModeratorCredentials.md  ModeratorOrAdminInfo.md  ModeratorResponse.md  Order.md  (+24 more)
buff-notifications/buffapi/src/apis/: configuration.rs  cratehandlersadminblacklist_api.rs  cratehandlersadmincurrency_api.rs  cratehandlersadminmoderators_api.rs  cratehandlersadminorders_api.rs  cratehandlersadminrequisites_api.rs  cratehandlersadminreviews_api.rs  cratehandlersadminsocial_api.rs  cratehandlersadminusers_api.rs  cratehandlersauthadmins_api.rs  cratehandlersauthusers_api.rs  cratehandlerscurrency_api.rs  cratehandlersorders_api.rs  cratehandlersrequisites_api.rs  cratehandlersreviewsusers_api.rs  cratehandlerssocial_api.rs  cratehandlersstatususers_api.rs  cratehandlersuser_api.rs  mod.rs
buff-notifications/buffapi/src/models/: add_review_request.rs  add_video_review_request.rs  admin_login_response.rs  assign_moderator_request.rs  blacklist_user_request.rs  bounds.rs  change_password_request.rs  chat_history.rs  chat_history_messages_inner_inner.rs  chat_response.rs  create_currency_request.rs  create_order_request.rs  credentials.rs  currency.rs  details.rs  email_form.rs  get_chat_request.rs  jwt_response.rs  login_link_response.rs  message.rs  mod.rs  moderator_credentials.rs  moderator_or_admin_info.rs  moderator_response.rs  order.rs  registrations_in_period_response.rs  remove_review_request.rs  remove_video_review_request.rs  requisites.rs  review.rs  review_count_response.rs  send_message_response.rs  set_rate_request.rs  set_requisites_data_request.rs  set_social_url_request.rs  social.rs  status_request.rs  status_response.rs  time_bounds.rs  top_user.rs  (+9 more)
buff-notifications/src/: apiservice.rs  commands.rs  handlers.rs  lib.rs  main.rs  schema.rs  state.rs
buff-notifications/src/configuration/: mod.rs
buff-notifications/src/repository/: error.rs  mod.rs
entity/: Cargo.toml
(+75 files in other folders)
