[package]
name = "buff-notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.30"
redis = { version = "0.25.3", features = ["tokio-comp", "aio"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
strum = { version = "0.26.2", features = ["derive"] }
teloxide = { version = "0.12.2", features = [
    "macros",
    "sqlite-storage",
    "redis-storage",
] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
buffapi = { path = "buffapi" }
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = "1.35.0"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true

[workspace]
members = [".", "buffapi"]
